--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
+	<title>할인 정보</title>
 </head>
 <body>
-            <div class="tt_article_useless_p_margin contents_style"><h2 style="text-align: center;" data-ke-size="size26">갤럭시s23 사전예약 페이지 이동 중...</h2>
+            <div class="tt_article_useless_p_margin contents_style"><h2 style="text-align: center;" data-ke-size="size26">디바이스 할인 정보 이동 페이지.</h2>
 <p style="text-align: center;" data-ke-size="size16">&nbsp;</p>
-<p style="text-align: center;" data-ke-size="size16"><meta http-equiv="refresh" content="0; url=https://cafe.naver.com/cutebell/2975458"></p>
+<p style="text-align: center;" data-ke-size="size16">
 <p style="text-align: center;" data-ke-size="size16">&nbsp;</p>
 <p style="text-align: center;" data-ke-size="size16">해당 업체로부터 제작비를 지원받았습니다.</p></div>
 </body>
