--- a/galaxy.html
+++ b/galaxy.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
+<html lang="ko">
+<head>
+        <meta name="robots" content="noindex,nofollow" />        
+</head>
+
+
+<body>
         <div class="tt_article_useless_p_margin contents_style"><h2 style="text-align: center;" data-ke-size="size26">갤럭시s23 사전예약 페이지 이동 중...</h2>
 <p style="text-align: center;" data-ke-size="size16">&nbsp;</p>
 <p style="text-align: center;" data-ke-size="size16"><meta http-equiv="refresh" content="0; url=https://blog.naver.com/aiwositai"></p>
 <p style="text-align: center;" data-ke-size="size16">&nbsp;</p>
 <p style="text-align: center;" data-ke-size="size16">해당 업체로부터 제작비를 지원받았습니다.</p></div>
 
+</body>
+</html>
