--- a/Boss_todayhome.html
+++ b/Boss_todayhome.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<html lang="ko">
+<head>
+        <meta name="robots" content="noindex,nofollow" />        
+</head>
+<body>        
         <div class="tt_article_useless_p_margin contents_style">
                 
         <p style="text-align: center;" data-ke-size="size16">&nbsp;</p>        
@@ -24,3 +29,5 @@
             
         <p style="text-align: center;" data-ke-size="size16"> 큐레이터 활동의 일환으로 수수료를 지급받을 수 있습니다.</p>
         <p style="text-align: center;" data-ke-size="size16"> - 소비자 가격은 동일합니다. - </p></div>
+</body>
+</html>
