--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="robots" content="noindex,nofollow" />       
 	<title>할인 정보</title>
 </head>
 <body>
-            <div class="tt_article_useless_p_margin contents_style"><h2 style="text-align: center;" data-ke-size="size26">디바이스 할인 정보 이동 페이지.</h2>
-<p style="text-align: center;" data-ke-size="size16">&nbsp;</p>
-<p style="text-align: center;" data-ke-size="size16">
-<p style="text-align: center;" data-ke-size="size16">&nbsp;</p>
-<p style="text-align: center;" data-ke-size="size16">해당 업체로부터 제작비를 지원받았습니다.</p></div>
+	<div class="tt_article_useless_p_margin contents_style">
+	<h2 style="text-align: center;" data-ke-size="size26">디바이스 할인 정보 이동 페이지.</h2>
+	<p style="text-align: center;" data-ke-size="size16">&nbsp;</p>
+	<p style="text-align: center;" data-ke-size="size16">
+	<p style="text-align: center;" data-ke-size="size16">&nbsp;</p>
+	<p style="text-align: center;" data-ke-size="size16">해당 업체로부터 제작비를 지원받았습니다.</p></div>
 </body>
 </html>
